<resources>
    <string name="app_name">Places Near Me</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD2ess1s_lta6cc6OLMi4ygIvlHiBLXftU</string>
    <string name="xinchao">Xin chào, </string>
    <string name="timkiem">Bạn tìm gì hôm nay?</string>
    <string name="tendanhmuc">Tên danh mục</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="sua">Sửa</string>
    <string name="luu">Lưu</string>
    <string name="tennguoidung">Ha Quoc Anh Kiet</string>
    <string name="tenhienthi">Tên hiển thị</string>
    <string name="email">Email</string>
    <string name="emailExample">anhkietxl051197@gmail.com</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="doimatkhau">Đổi mật khẩu:</string>
    <string name="btndoimatkhau">Đổi mật khẩu</string>
    <string name="hintmatkhaumoi">Nhập mật khẩu mới</string>
    <string name="hintnhaplaimatkhau">Nhập lại mật khẩu mới</string>
    <string name="thu2">Thứ Hai: 5:00 am - 10:00 pm</string>
    <string name="thu3">Thứ Ba: 5:00 am - 10:00 pm</string>
    <string name="thu4">Thứ Tư: 5:00 am - 10:00 pm</string>
    <string name="thu5">Thứ Năm: 5:00 am - 10:00 pm</string>
    <string name="thu6">Thứ Sáu: 5:00 am - 10:00 pm</string>
    <string name="thu7">Thứ Bảy: Không hoạt động</string>
    <string name="chunhat">Chủ nhật: Không hoạt động</string>
    <string name="danghoatdong">Đang hoạt động</string>
    <string name="dongcua">Đóng cửa</string>
    <string name="tendiadiem">Trường Đại học Sư Phạm Kỹ Thuật TP. Hồ Chí Minh</string>
    <string name="sodienthoai">0373385547</string>
    <string name="nhapwebsite">http://abc.com</string>
    <string name="website">Trang web</string>
    <string name="danhgia">10 đánh giá</string>
    <string name="soanh">10 ảnh</string>
    <string name="hinhanh">Hình ảnh</string>
    <string name="diachi">Địa chỉ</string>
    <string name="diachimau">1, Vo Van Ngan, Quan Thu Duc, Tp. Ho Chi Minh</string>
    <string name="danhmuc">Danh mục</string>
    <string name="themdanhmuc">Chọn lại danh mục</string>
    <string name="thoigianhoatdong">Thời gian hoạt động</string>
    <string name="nhanxetdanhgia">Nhận xét và Đánh giá</string>
    <string name="chupanh">Chụp ảnh</string>
    <string name="chonanh">Chọn ảnh</string>
    <string name="anhdiadiem">Ảnh địa điểm</string>
    <string name="themanhdiadiem">Thêm ảnh địa điểm</string>
    <string name="nhapthu2">Thứ Hai:</string>
    <string name="nhapthu3">Thứ Ba:</string>
    <string name="nhapthu4">Thứ Tư:</string>
    <string name="nhapthu5">Thứ Năm:</string>
    <string name="nhapthu6">Thứ Sáu:</string>
    <string name="nhapthu7">Thứ Bảy:</string>
    <string name="nhapchunhat">Chủ nhật:</string>
    <string name="nhaptendiadiem">Tên địa điểm</string>
    <string name="nhapsodienthoai">Số điện thoại</string>
    <string name="thu2denthu6">Thứ 2 - Thứ 6:</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="mocua24hsuottuan">Mở của 24h suốt tuần</string>
    <string name="khongcodulieudehienthi">Không có dữ liệu để hiển thị</string>
    <string name="khongcothoigianhoatdong">Không có thời gian hoạt động</string>
    <string name="mocuatheolich">Mở cửa theo lịch</string>
    <string name="mocua24h">Mở cửa cả ngày</string>
    <string name="datgio">Đặt giờ</string>
    <string name="khongmocua">Không mở cửa</string>
    <string name="themdiadiem">Thêm địa điểm mới</string>
    <string name="kieuxem">Kiểu xem:</string>
    <string name="sapxep">Khoảng cách:</string>
    <string name="capnhatdiadiem">cập nhật địa điểm</string>
    <string name="capnhatkhongthanhcong">Cập nhật không thành công!</string>

    <string name="coloitrongquatrinhlaydulieu">Có lỗi trong quá trình lấy dữ liệu!</string>
    <string name="themthanhcong">Thêm thành công!</string>
    <string name="themloi">Có lỗi khi thêm!!!</string>

    <string name="dangnhap">Đăng nhập</string>
    <string name="khongcotaikhoan">Bạn không có tài khoản? Đăng ký ngay</string>
    <string name="khongduocdetrong">Bạn không được để trống!!!</string>

    <string name="dangky">Đăng ký</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dacotaikhoan">Bạn đã có tài khoản? Đăng nhập</string>
    <string name="coloidangky">Mật khẩu phải có ít nhất 6 ký tự!</string>
    <string name="matkhaukhongkhop">Mật khẩu không khớp</string>

    <string name="noidungbinhluan">Nội dung bình luận</string>
    <string name="dang">Đăng</string>
    <string name="tatcabinhluan">Tất cả bình luận</string>

    <string name="tukhoa">Từ khoá</string>

    <string name="themhinhthanhcong">Thêm hình ảnh thành công!</string>
    <string name="themhinhanhthatbai">Thêm hình ảnh thất bại!!!</string>
    <string name="chonhinhanhdanhmuc">Nhấn vào hình trên để chọn hình cho danh mục</string>
    <string name="danhsachtukhoa">Nhập danh sách từ khoá</string>
    <string name="nhaptukhoaoday">Cách nhập: từ khoá, từ khoá tiếp theo, ...</string>
    <string name="themdanhmuc2">Thêm danh mục</string>

    <string name="loidanhmuc">Địa điểm phải có ít nhất một danh mục!!!</string>
    <string name="diachitrong">Không được để trống địa chỉ!!!</string>
    <string name="tendanhmuctrong">Không được để trống tên danh mục!!!</string>
    <string name="tendiadiemtrong">Không được để trống tên địa điểm!!!</string>
    <string name="khongtontaidiadiem">Không tồn tại địa điểm này</string>
    <string name="capnhatthanhcong">Cập nhật thành công!</string>
    <string name="suadanhmuc">Sửa danh mục</string>

    <string name="daylaban">Đây là bạn</string>
    <string name="duongdi">Đường đi #</string>
    <string name="mogoogleMap">Mở Google Maps?</string>
    <string name="mo">Có</string>
    <string name="khong">Không</string>
    <string name="khongthemomap">Không thể mở map</string>
    <string name="hoichiduong">Bạn có muốn xem đường đi đến</string>
    <string name="thoigian">Thời gian</string>
    <string name="dabinhluan">Đã bình luận</string>
    <string name="loibinhluan">Vui lòng đánh giá sao cho địa điểm! Bình luận có thể để trống</string>

    <string name="phienban">Phiên bản: </string>
    <string name="dangtai">Đang tải ...</string>
    <string name="doichut">Phiền bạn chờ chút nhé</string>

    <string name="khongcobinhluan">Chưa có bình luận nào</string>
    <string name="khongcohinh">Chưa có hình</string>
    <string name="khongcosdt">Không có số điện thoại</string>
    <string name="khongcoduongdan">Không có dường dẫn</string>

    <string name="dangxuat">Đăng xuất</string>

    <string name="khongtimthaydiadiem">Không tìm thấy địa điểm bạn cần</string>
    <string name="capnhatthemdanhmuc">Thêm / Cập nhật danh mục</string>

    <!-- Permission -->
    <string name="tuchoicapquyen">Quyền yêu cầu bị từ chối</string>

    <!-- Places Type -->
    <string-array name="place_type">
        <item>accounting</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>atm</item>
        <item>bakery</item>
        <item>bank</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bicycle_store</item>
        <item>book_store</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_dealer</item>
        <item>car_rental</item>
        <item>car_repair</item>
        <item>car_wash</item>
        <item>casino</item>
        <item>cemetery</item>
        <item>church</item>
        <item>city_hall</item>
        <item>clothing_store</item>
        <item>convenience_store</item>
        <item>dentist</item>
        <item>department_store</item>
        <item>doctor</item>
        <item>drugstore</item>
        <item>electrician</item>
        <item>electronics_store</item>
        <item>embassy</item>
        <item>fire_station</item>
        <item>florist</item>
        <item>funeral_home</item>
        <item>furniture_store</item>
        <item>gas_station</item>
        <item>grocery_or_supermarket</item>
        <item>gym</item>
        <item>hair_care</item>
        <item>hardware_store</item>
        <item>hindu_temple</item>
        <item>home_goods_store</item>
        <item>hospital</item>
        <item>insurance_agency</item>
        <item>jewelry_store</item>
        <item>laundry</item>
        <item>lawyer</item>
        <item>library</item>
        <item>light_rail_station</item>
        <item>liquor_store</item>
        <item>local_government_office</item>
        <item>locksmith</item>
        <item>lodging</item>
        <item>accounting</item>
        <item>meal_delivery</item>
        <item>meal_takeaway</item>
        <item>mosque</item>
        <item>movie_rental</item>
        <item>movie_theater</item>
        <item>moving_company</item>
        <item>museum</item>
        <item>night_club</item>
        <item>painter</item>
        <item>park</item>
        <item>parking</item>
        <item>pet_store</item>
        <item>pharmacy</item>
        <item>physiotherapist</item>
        <item>plumber</item>
        <item>police</item>
        <item>post_office</item>
        <item>primary_school</item>
        <item>real_estate_agency</item>
        <item>restaurant</item>
        <item>roofing_contractor</item>
        <item>rv_park</item>
        <item>school</item>
        <item>secondary_school</item>
        <item>shoe_store</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>stadium</item>
        <item>storage</item>
        <item>store</item>
        <item>subway_station</item>
        <item>supermarket</item>
        <item>synagogue</item>
        <item>taxi_stand</item>
        <item>tourist_attraction</item>
        <item>train_station</item>
        <item>transit_station</item>
        <item>travel_agency</item>
        <item>university</item>
        <item>veterinary_care</item>
        <item>zoo</item>
    </string-array>

    <!-- View -->
    <string-array name="array_kieuxem">
        <item>Danh sách</item>
        <item>Bản đồ</item>
    </string-array>

    <!-- Sort -->
    <string-array name="array_sapxep">
        <item>Tăng dần</item>
        <item>Giảm dần</item>
    </string-array>
</resources>
