<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:background="@drawable/background_cut"/>

    <LinearLayout
        android:id="@+id/linearTaiKhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTaiKhoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/taikhoan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/sua"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="right"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/txtLuu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/luu"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="right"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeImgAva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearTaiKhoan"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAva"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ava_man"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgCamera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_camera"
            android:layout_alignBottom="@+id/imgAva"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/relativeImgAva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenhienthi"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edTenHienThi"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:textSize="15sp"
                android:text="@string/tennguoidung"
                android:enabled="false"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/ratingLightGray"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:textSize="15sp"
                android:text="@string/emailExample"
                android:enabled="false"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnDangXuat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/dangxuat"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"/>
    </LinearLayout>
</RelativeLayout>